# currency-converter

./: README.md  pyproject.toml
src/: currencies.db  database.py  main.py  models.py
src/templates/: dashboard.html  layout.html
