[tool.poetry]
name = "currency_converter"
version = "0.1.0"
description = ""
authors = ["syed-hussain-93 <syed.musharot.hussain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.1"
SQLAlchemy = "^1.4.32"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
